--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,11 +11,15 @@ add_definitions(${LLVM_DEFINITIONS})
 include_directories(${LLVM_INCLUDE_DIRS} include)
 link_directories(${LLVM_LIBRARY_DIRS} ${CMAKE_CURRENT_BINARY_DIR})
 
+if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+  add_compile_options(-Wall -Wextra -Werror)
+endif()
+
 set(CMAKE_BUILD_TYPE Debug)
 
-add_llvm_library(DivZeroPass MODULE
+add_llvm_library(OOBChecker MODULE
   src/PointerAnalysis.cpp
-  src/DivZeroAnalysis.cpp
+  src/OOBCheckerPass.cpp
   src/Transfer.cpp
   src/ChaoticIteration.cpp
   src/Domain.cpp
