--- a/test/Makefile
+++ b/test/Makefile
@@ -7,7 +7,7 @@ all: ${TARGETS}
 
 %: %.c
 	clang -emit-llvm -S -fno-discard-value-names -Xclang -disable-O0-optnone -c -o $@.ll $<
-	opt -load ../build/DivZeroPass.so -DivZero $@.ll -disable-output 2>&1 > $@.out | tee $@.err
+	opt -load ../build/OOBChecker.so -OOBChecker $@.ll -disable-output 2>&1 > $@.out | tee $@.err
 	@echo "\n"
 
 
