--- a/unit_test/Makefile
+++ b/unit_test/Makefile
@@ -1,15 +1,15 @@
 CC = clang++
-CFLAGS = -std=c++14 -Wall -Wextra -Werror -pedantic -g -I../include -DUNIT_TEST
+CFLAGS = -std=c++14 -Wall -Wextra -pedantic -g -I../include -DUNIT_TEST
 
 all: main
 
-domain.o: ../src/domain.cpp
+interval.o: ../src/Interval.cpp
 	$(CC) $(CFLAGS) $^ -c -o $@
-
+domain.o: ../src/Domain.cpp
+	$(CC) $(CFLAGS) $^ -c -o $@
 main.o: main.cpp
 	$(CC) $(CFLAGS) $^ -c -o $@
-
-main: main.o domain.o
+main: main.o domain.o interval.o
 	$(CC) $(CFLAGS) $^ -o $@
 
 .PHONY: clean
